--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -3,5 +3,6 @@
     "/assets/css/app.css": "/assets/css/app.css",
     "/img/arr-top.svg": "/img/arr-top.svg",
     "/img/button-red.svg": "/img/button-red.svg",
-    "/img/logo.svg": "/img/logo.svg"
+    "/img/logo.svg": "/img/logo.svg",
+    "/img/headimg.svg": "/img/headimg.svg"
 }
