--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -3,6 +3,11 @@
     "/assets/css/app.css": "/assets/css/app.css",
     "/img/arr-top.svg": "/img/arr-top.svg",
     "/img/button-red.svg": "/img/button-red.svg",
+    "/img/headimg.svg": "/img/headimg.svg",
     "/img/logo.svg": "/img/logo.svg",
-    "/img/headimg.svg": "/img/headimg.svg"
+    "/img/gradient.png": "/img/gradient.png",
+    "/img/stars.png": "/img/stars.png",
+    "/img/crypto-text.svg": "/img/crypto-text.svg",
+    "/img/gradient1.png": "/img/gradient1.png",
+    "/img/gradient2.png": "/img/gradient2.png"
 }
