trends-tabs-container

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -9,10 +9,18 @@
     "/img/crypto-text.svg": "/img/crypto-text.svg",
     "/img/gradient.png": "/img/gradient.png",
     "/img/gradient1.png": "/img/gradient1.png",
+    "/img/gradient11.png": "/img/gradient11.png",
     "/img/gradient2.png": "/img/gradient2.png",
     "/img/headimg.svg": "/img/headimg.svg",
     "/img/logo.svg": "/img/logo.svg",
-    "/img/stars.png": "/img/stars.png",
     "/img/search.svg": "/img/search.svg",
-    "/img/gradient11.png": "/img/gradient11.png"
+    "/img/stars.png": "/img/stars.png",
+    "/img/btc.svg": "/img/btc.svg",
+    "/img/doge.svg": "/img/doge.svg",
+    "/img/eth.svg": "/img/eth.svg",
+    "/img/ltc.svg": "/img/ltc.svg",
+    "/img/solana 1.svg": "/img/solana 1.svg",
+    "/img/xrp.svg": "/img/xrp.svg",
+    "/img/local_fire_department.svg": "/img/local_fire_department.svg",
+    "/img/moving.svg": "/img/moving.svg"
 }
