--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -5,22 +5,25 @@
     "/img/advantages-img2.png": "/img/advantages-img2.png",
     "/img/advantages-img3.png": "/img/advantages-img3.png",
     "/img/arr-top.svg": "/img/arr-top.svg",
+    "/img/btc.svg": "/img/btc.svg",
     "/img/button-red.svg": "/img/button-red.svg",
     "/img/crypto-text.svg": "/img/crypto-text.svg",
+    "/img/doge.svg": "/img/doge.svg",
+    "/img/eth.svg": "/img/eth.svg",
     "/img/gradient.png": "/img/gradient.png",
     "/img/gradient1.png": "/img/gradient1.png",
     "/img/gradient11.png": "/img/gradient11.png",
     "/img/gradient2.png": "/img/gradient2.png",
     "/img/headimg.svg": "/img/headimg.svg",
-    "/img/logo.svg": "/img/logo.svg",
-    "/img/search.svg": "/img/search.svg",
-    "/img/stars.png": "/img/stars.png",
-    "/img/btc.svg": "/img/btc.svg",
-    "/img/doge.svg": "/img/doge.svg",
-    "/img/eth.svg": "/img/eth.svg",
-    "/img/ltc.svg": "/img/ltc.svg",
-    "/img/solana 1.svg": "/img/solana 1.svg",
-    "/img/xrp.svg": "/img/xrp.svg",
     "/img/local_fire_department.svg": "/img/local_fire_department.svg",
-    "/img/moving.svg": "/img/moving.svg"
+    "/img/logo.svg": "/img/logo.svg",
+    "/img/ltc.svg": "/img/ltc.svg",
+    "/img/moving.svg": "/img/moving.svg",
+    "/img/search.svg": "/img/search.svg",
+    "/img/solana 1.svg": "/img/solana 1.svg",
+    "/img/stars.png": "/img/stars.png",
+    "/img/xrp.svg": "/img/xrp.svg",
+    "/img/about-account__image.png": "/img/about-account__image.png",
+    "/img/control_point_duplicate.svg": "/img/control_point_duplicate.svg",
+    "/img/paid.svg": "/img/paid.svg"
 }
